[gd_scene format=3 uid="uid://bup3qkf8uwv5k"]

[ext_resource type="Script" uid="uid://cyt7fs7r2njbd" path="res://scenes/main_menu/main_menu.gd" id="1_76i7u"]
[ext_resource type="PackedScene" uid="uid://bg8ahamfcwj3i" path="res://nodes/background.tscn" id="1_ebmvx"]
[ext_resource type="Theme" uid="uid://b4knt16xuynoj" path="res://ui_themes/title_label_theme.tres" id="1_mgyuc"]
[ext_resource type="PackedScene" uid="uid://bi1p1sul5tdrj" path="res://nodes/player/player_camera.tscn" id="2_756rb"]
[ext_resource type="Resource" uid="uid://dhwjuh6b6sghl" path="res://content/albums/eternity.tres" id="2_wem23"]

[node name="MainMenu" type="Node" unique_id=200770569]
script = ExtResource("1_76i7u")
album = ExtResource("2_wem23")

[node name="UI" type="CanvasLayer" parent="." unique_id=920927236]

[node name="Panel" type="Panel" parent="UI" unique_id=1886000492]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 288.0
offset_top = 162.0
offset_right = -288.0
offset_bottom = -162.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/Panel" unique_id=121415762]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_right = 24.0
offset_bottom = 23.0
grow_horizontal = 2
theme = ExtResource("1_mgyuc")
text = "Arrow Duck 2!!"

[node name="Quit" type="Button" parent="UI/Panel" unique_id=805845533]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -46.0
offset_right = 80.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
text = "Duck off"

[node name="Start" type="Button" parent="UI/Panel" unique_id=1456424670]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -102.0
offset_right = 80.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 0
text = "Become a duck"

[node name="DeleteData" type="Button" parent="UI" unique_id=2145185234]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 160.0
grow_vertical = 0
text = "Delete all saved data"

[node name="Env" type="Node2D" parent="." unique_id=433211026]

[node name="Background" parent="Env" unique_id=1073461728 instance=ExtResource("1_ebmvx")]

[node name="PlayerCamera" parent="Env" unique_id=499102077 instance=ExtResource("2_756rb")]

[connection signal="button_down" from="UI/Panel/Quit" to="." method="_on_quit_button_down"]
[connection signal="button_down" from="UI/Panel/Start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="UI/DeleteData" to="." method="_on_delete_data_button_down"]
